# kexa-lite

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  OPS_RUNBOOK.md  README.md  TESTNET.md  docker-compose.remote1.joinseed.yml  docker-compose.remote1.root.yml  docker-compose.remote1.seed.yml  docker-compose.seedonly.root.yml  docker-compose.seedonly.seed1.harden.yml  docker-compose.yml  kexa
.github/workflows/: ci.yml  release-rc.yml
crates/kexa-cli/: Cargo.toml
crates/kexa-cli/src/: main.rs
crates/kexa-consensus/: Cargo.toml
crates/kexa-consensus/src/: lib.rs
crates/kexa-node/: Cargo.toml
crates/kexa-node/src/: genesis.rs  main.rs
crates/kexa-p2p/: Cargo.toml
crates/kexa-p2p/src/: lib.rs
crates/kexa-proto/: Cargo.toml
crates/kexa-proto/src/: lib.rs
crates/kexa-storage/: Cargo.toml
crates/kexa-storage/src/: lib.rs
crates/kexa-testkit/: Cargo.toml
crates/kexa-testkit/src/: lib.rs
crates/kexa-testkit/tests/: integration.rs
crates/kexa-wallet/: Cargo.toml
crates/kexa-wallet/src/: main.rs
deploy/mainnet/: README.md  env.example
deploy/mainnet/joiner/: README.md  docker-compose.yml
deploy/mainnet/scripts/: m5_collect_proof.sh  m5_joiner_bootstrap.sh  m5_preflight.sh  m5_seed_bootstrap.sh  m5_verify_rpc.sh
deploy/mainnet/seed/: docker-compose.yml
deploy/mainnet/seed/systemd/: kexa-mainnet.service
docker/: release.Dockerfile
docs/: ARCHITECTURE.md  CONTRIBUTING.md  LAUNCH_TESTNET.md  MAINNET_GATE_M1.md  MAINNET_GATE_M3.md  MAINNET_GATE_M4.md  MAINNET_GATE_M5.md  PR_SUMMARY.md  README.md  ROADMAP.md  SECURITY.md  SPEC_V0.md  THREAT_MODEL.md  UPGRADE_POLICY.md
docs/announcements/: MAINNET_LIVE_ANNOUNCEMENT.md
docs/mainnet/: JOIN_MAINNET.md  MAINNET_LIVE.md  README.md  SECURITY_MODEL.md  TROUBLESHOOTING_MAINNET.md  VERIFY_MAINNET.md
genesis/: mainnet.json
kexa-explorer/: .env.example  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts
kexa-explorer/app/: globals.css  layout.tsx  page.tsx
kexa-explorer/app/api/kexa/block/[hash]/: route.ts
kexa-explorer/app/api/kexa/blocks/: route.ts
kexa-explorer/app/api/kexa/health/: route.ts
kexa-explorer/app/api/kexa/peers/: route.ts
kexa-explorer/app/api/kexa/peers/live/: route.ts
kexa-explorer/app/api/kexa/tip/: route.ts
kexa-explorer/app/explorer/: page.tsx
kexa-explorer/app/explorer/block/[hash]/: page.tsx
kexa-explorer/app/nodes/: page.tsx
kexa-explorer/app/verify/: page.tsx
kexa-explorer/components/: background-video.tsx  block-detail.tsx  copy-button.tsx  explorer-dashboard.tsx  nav.tsx  network-status.tsx  nodes-view.tsx  page-transition.tsx  status-dot.tsx  verify-checks.tsx
kexa-explorer/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  skeleton.tsx  table.tsx
kexa-explorer/lib/: constants.ts  kexa.ts  schemas.ts  server-kexa.ts
launch/mainnet-live/: QUICKSTART_JOIN.md  QUICKSTART_VERIFY.md  README.md
launch/mainnet-live/examples/: env.example  systemd.example.service
scripts/: check_mainnet_live_links.sh  gate2_oneclick.sh  join_verify_testnet.ps1  local_status.ps1  mainnet_genesis_print.sh  release_build.sh  release_docker_build.sh  release_smoketest.sh  testnet_status.sh  verify_release_artifacts.sh
