[workspace]
resolver = "2"
members = [
  "crates/kexa-proto",
  "crates/kexa-consensus",
  "crates/kexa-storage",
  "crates/kexa-p2p",
  "crates/kexa-node",
  "crates/kexa-wallet",
  "crates/kexa-testkit",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
axum = "0.7"
bech32 = "0.9"
borsh = { version = "1", features = ["derive"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }

