[package]
name = "kexa-proto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
borsh = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
bech32 = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
serde-big-array = "0.5"

[dev-dependencies]
hex = { workspace = true }
