[package]
name = "kexa-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
kexa-proto = { path = "../kexa-proto" }
ed25519-dalek = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
